--- a/Study/AndroidManifest.xml
+++ b/Study/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-sdk
         android:minSdkVersion="18"
         android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.WRITE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
         android:allowBackup="true"
